   * Son of the Black Eye
     * cleaned up prestart events to stop units hopping around at map setup
     * Desert of Death leader without starting position replaced with no_leader
     * Clash of Armies mermen leader now created in event, not in side setup
   * The Dark Hordes
     * Underground Pool no longer has units off map and in walls
 * user interface
     * fix untranslated unit create dialog (#4424)
     * changed recall to show recall list even when gold < 20
     * added advancement and AMLA indicator icons, tooltips to dfool theme
     * allow pausing during replay
     * SECURITY: check safety of campaign download names: if any unsafe
       names are found, install is aborted before old version is removed
     * hitpoint update delays are now capped at 1 second (#4070)
     * reduce unnecessary scrolling in replays (#3152)
     * stop teleport glitches due to insufficient screen updates (#4234)
 * graphics
   * units can now have colors redefined to match team colors
   * team color can be defined in the side tag with "team_rgb=r,g,b"
   * new title screen and logo
   * changed the storm trident attack icon from fireball to lightingbolt
   * new attack icon for the fireball
   * portraits:
     * new portraits: Li'sar, Drake Burner, Drake Fighter, Drake Glider, 
       Elvish Shaman, Ghoul, Mermaid Initiate, Merman Fighter, Merman Hunter, 
       Naga Fighter, Orcish Assassin, Saurian Skirmisher
     * all Drake, Merman, Naga and Saurian upgrades now use level one portraits
     * Necrophage and Orcish Slayer upgrades now use level one portraits
   * new images: Konrad level 1, Tentacle of the Deep
   * new death animations: Initiate, Mage, Pikeman, Red Mage, White Mage,
     Tentacle of the Deep
   * removed deprecated death animation: Drake Fighter
   * new tiles: swamp, cave wall, paved road, variable-width canyon (#8817)
   * new villages: snow (human & elven), underground
   * Updated snow hills and hills
 * language and i18n: