@@ -33,6 +33,8 @@ namespace preferences {
 
 	void show_preferences_dialog(display& disp, const config& game_cfg);
 	bool show_video_mode_dialog(display& disp);
+	bool show_theme_dialog(display& disp);
+
 	// If prefs is non-null, save the hotkeys in that config instead of
 	// the default.
 	void show_hotkeys_dialog (display & disp, config *prefs=NULL);
